--- a/libs/ui-components/src/landing-page/how-it-works/how-it-works.component.scss
+++ b/libs/ui-components/src/landing-page/how-it-works/how-it-works.component.scss
@@ -1,5 +1,6 @@
 @use '@angular/material' as mat;
 @use 'libs/ui-components/src/styles/_variables.scss' as variables;
+@use '../../styles/mixins.scss' as mixins;
 
 .how-it-works {
   background-color: variables.$mat-selection-background-color;
@@ -45,14 +46,14 @@
   background-color: white;
   border-radius: 8px;
   overflow: hidden;
-  @include variables.flex-column;
+  @include mixins.flex-column;
   border: 1px solid #e0e0e0;
 
   &__image-container {
     width: 100%;
     height: 100%;
     display: flex;
-    @include variables.flex-option;
+    @include mixins.flex-option;
   }
 
   &__image {
@@ -64,7 +65,7 @@
   &__content {
     padding: 16px 20px;
     flex-grow: 1;
-    @include variables.flex-column;
+    @include mixins.flex-column;
   }
 
   &__title {
