feat(frontend): use mixins and variables to handle repetitive styling

--- a/libs/ui-components/src/styles/_mixins.scss
+++ b/libs/ui-components/src/styles/_mixins.scss
@@ -23,3 +23,11 @@
   justify-content: $justify-content;
   align-items: $align-items;
 }
+
+@mixin flex-row(
+  $direction: column,
+  $justify: center,
+){
+  flex-direction: $direction;
+  justify-content: $justify;
+}
