--- a/libs/ui-components/src/shop-cart-info/shop-cart-info.component.scss
+++ b/libs/ui-components/src/shop-cart-info/shop-cart-info.component.scss
@@ -1,4 +1,5 @@
 @use 'libs/ui-components/src/styles/_variables.scss' as variables;
+@use '../../src/styles/mixins.scss' as mixins;
 
 .fixed-cart-container {
   position: fixed;
@@ -6,33 +7,28 @@
   left: 0;
   right: 0;
   z-index: 1000;
-  background-color: #fff;
+  background-color: white;
   box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
   padding: 16px;
-  transition: transform 0.3s ease;
 }
 
 .fixed-cart {
   max-width: 1200px;
   margin: 0 auto;
-  display: flex;
-  flex-direction: column;
+  @include mixins.flex-column;
 
   @media (min-width: 768px) {
-    flex-direction: row;
+    @include mixins.flex-row(row,space-between);
     align-items: center;
-    justify-content: space-between;
   }
 }
 
 .cart-content {
-  display: flex;
-  flex-direction: column;
+  @include mixins.flex-column;
   width: 100%;
 
   @media (min-width: 768px) {
-    flex-direction: row;
-    justify-content: center;
+    @include mixins.flex-row(row,center);
     max-width: 60%;
   }
 }
@@ -41,9 +37,7 @@
   margin-bottom: 16px;
 
   @media (min-width: 768px) {
-    justify-content: center;
-    display: flex;
-    align-items: center;
+    @include mixins.flex-option(flex,center,center);
     flex-direction: column;
     margin-bottom: 0;
     margin-right: 24px;
@@ -53,7 +47,7 @@
   label {
     display: block;
     margin-bottom: 8px;
-    color: #666;
+    color: variables.$description-color;
     font-size: 14px;
   }
 }
@@ -67,21 +61,20 @@
     width: 100%;
     height: 40px;
     padding: 8px 12px;
-    border: 1px solid #ccc;
+    border: 1px solid variables.$description-color;
     border-radius: 4px;
     font-size: 16px;
     text-align: center;
 
     &:focus {
       outline: none;
-      border-color: #0066cc;
+      border-color: var(--mat-sys-on-primary-container);
     }
   }
 }
 
 .product-info {
-  display: flex;
-  flex-direction: column;
+  @include mixins.flex-column;
   justify-content: center;
   flex-grow: 1;
   margin-bottom: 16px;
@@ -104,26 +97,20 @@
 }
 
 .delivery-info {
-  display: flex;
-  align-items: center;
-  color: #666;
+  @include mixins.align-center;
+  color: variables.$description-color;
   font-size: 14px;
 
   .delivery-icon {
     display: inline-flex;
     margin-right: 8px;
-    color: #666;
+    color: variables.$description-color;
 
-    svg {
-      width: 18px;
-      height: 18px;
-    }
   }
 }
 
 .submit-section {
   width: 100%;
-
   @media (min-width: 768px) {
     max-width: 200px;
   }
@@ -146,10 +133,8 @@
     text-align: center;
   }
   .quantity-section {
-    display: flex;
+    @include mixins.flex-option(flex,center,center);
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
   }
   .product-price {
     font-size: 16px;
@@ -160,8 +145,3 @@
   }
 }
 
-@media (max-width: 480px) {
-  .delivery-info {
-    font-size: 12px;
-  }
-}
