--- a/libs/ui-components/src/styles/_mixins.scss
+++ b/libs/ui-components/src/styles/_mixins.scss
@@ -24,10 +24,7 @@
   align-items: $align-items;
 }
 
-@mixin flex-row(
-  $direction: column,
-  $justify: center,
-){
+@mixin flex-row($direction: column, $justify: center) {
   flex-direction: $direction;
   justify-content: $justify;
 }
