--- a/libs/ui-components/src/shop-cart-info/shop-cart-info.component.scss
+++ b/libs/ui-components/src/shop-cart-info/shop-cart-info.component.scss
@@ -9,7 +9,7 @@
   z-index: 1000;
   background-color: white;
   box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
-  padding: 16px;
+  padding: 16px 16px 16px 40px;
 }
 
 .fixed-cart {
