feat(frontend): adjust initial price value

--- a/libs/ui-components/src/shop-cart-info/shop-cart-info.component.html
+++ b/libs/ui-components/src/shop-cart-info/shop-cart-info.component.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="product-info">
-        @if (!price) {
+        @if (price === -1) {
           <div class="product-availability">
             {{ 'cartInfo.REQUEST' | transloco }}
           </div>
