feat(frontend): use global variable to avoid repetitiveness

--- a/libs/ui-components/src/styles/_variables.scss
+++ b/libs/ui-components/src/styles/_variables.scss
@@ -7,6 +7,7 @@ $schedule-description-color: #606060;
 $check-icon-color: #2e5235;
 
 $description-color: #666;
+$title-color: #333;
 $grid-max-width: 1200px;
 $grid-margin-top: 80px;
 $grid-gap-large: 20px;
