--- a/libs/ui-components/src/shop-cart-info/shop-cart-info.component.scss
+++ b/libs/ui-components/src/shop-cart-info/shop-cart-info.component.scss
@@ -9,7 +9,7 @@
   z-index: 1000;
   background-color: white;
   box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
-  padding: 24px 10%;
+  padding: 10px 10%;
 
   @media (max-width: 767px) {
     padding: 36px 16px;
@@ -120,6 +120,7 @@
   flex-grow: 1;
   margin-bottom: 0;
   width: 100%;
+  text-align: center;
 
   @media (min-width: 768px) {
     align-items: flex-start;
@@ -136,7 +137,6 @@
   font-size: 32px;
   font-weight: 600;
   color: variables.$title-color;
-  margin-bottom: 8px;
 
   @media (min-width: 768px) {
     margin-bottom: 0;
