--- a/libs/ui-components/src/config-information/config-information.component.scss
+++ b/libs/ui-components/src/config-information/config-information.component.scss
@@ -1,11 +1,18 @@
-$canvas-width: 700px;
+$canvas-width: 50%;
+$card-padding-desktop: 30px;
+$card-margin: 1.7%;
 
 .config-card {
   background-color: #f9f9f9;
-  padding: 30px;
-  margin: 24px;
+  padding: $card-padding-desktop;
+  margin-right: $card-margin;
+  margin-left: $card-margin;
+  margin-top: 5%;
   border-radius: 12px;
   width: calc(100vw - #{$canvas-width});
+  max-width: 100%;
+  box-sizing: border-box;
+  min-width: 320px;
 }
 
 .card-title {
@@ -22,17 +29,51 @@ $canvas-width: 700px;
   color: rgba(0, 0, 0, 0.75);
 }
 
-@media (max-width: 768px) {
+// Large tablets and small desktops
+@media (max-width: 1200px) {
   .config-card {
-    padding: 16px;
+    width: calc(95% + #{$card-margin});
+    margin-top: 5%;
+  }
+}
+
+// Medium tablets
+@media (max-width: 992px) {
+  .config-card {
+    width: calc(95% + #{$card-margin});
+    margin-top: 5%;
   }
 
   .card-title {
-    font-size: 20px;
-    margin-bottom: 12px;
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .config-card {
+    width: calc(95% + #{$card-margin});
+  }
+
+  .card-title {
+    font-size: 22px;
+    margin-bottom: 20px;
   }
 
   .card-content {
-    font-size: 14px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 576px) {
+  .config-card {
+    width: calc(95% + #{$card-margin});
+    margin-top: 5%;
+  }
+
+
+  .card-content {
+    font-size: 16px;
+    line-height: 1.5;
   }
 }
