feat(frontend): add translation for configuration information

--- a/libs/ui-components/src/config-information/config-information.component.html
+++ b/libs/ui-components/src/config-information/config-information.component.html
@@ -1,7 +1,6 @@
 <div class="config-card">
-  <h2 class="card-title">Configuration</h2>
+  <h2 class="card-title">{{ 'config-information.TITLE' | transloco }}</h2>
   <p class="card-content">
-    Filter and sort materials according to your requirements. Calculate the
-    service life and select a suitable material for your project.
+    {{ 'config-information.DESCRIPTION' | transloco }}
   </p>
 </div>
