--- a/libs/ui-components/src/config-information/config-information.component.scss
+++ b/libs/ui-components/src/config-information/config-information.component.scss
@@ -1,15 +1,13 @@
-$canvas-width: 50%;
-$card-padding-desktop: 30px;
-$card-margin: 1.7%;
+@use 'libs/ui-components/src/styles/_variables.scss' as variables;
 
 .config-card {
   background-color: #f9f9f9;
-  padding: $card-padding-desktop;
-  margin-right: $card-margin;
-  margin-left: $card-margin;
+  padding: variables.$card-padding-desktop;
+  margin-right: variables.$card-margin;
+  margin-left: variables.$card-margin;
   margin-top: 5%;
   border-radius: 12px;
-  width: calc(100vw - #{$canvas-width});
+  width: calc(100vw - #{variables.$canvas-width});
   max-width: 100%;
   box-sizing: border-box;
   min-width: 320px;
@@ -29,18 +27,16 @@ $card-margin: 1.7%;
   color: rgba(0, 0, 0, 0.75);
 }
 
-// Large tablets and small desktops
 @media (max-width: 1200px) {
   .config-card {
-    width: calc(95% + #{$card-margin});
+    width: calc(95% + #{variables.$card-margin});
     margin-top: 5%;
   }
 }
 
-// Medium tablets
 @media (max-width: 992px) {
   .config-card {
-    width: calc(95% + #{$card-margin});
+    width: calc(95% + #{variables.$card-margin});
     margin-top: 5%;
   }
 
@@ -52,7 +48,7 @@ $card-margin: 1.7%;
 
 @media (max-width: 768px) {
   .config-card {
-    width: calc(95% + #{$card-margin});
+    width: calc(95% + #{variables.$card-margin});
   }
 
   .card-title {
@@ -67,10 +63,9 @@ $card-margin: 1.7%;
 
 @media (max-width: 576px) {
   .config-card {
-    width: calc(95% + #{$card-margin});
+    width: calc(95% + #{variables.$card-margin});
     margin-top: 5%;
   }
-
 
   .card-content {
     font-size: 16px;
