--- a/libs/ui-components/src/styles/_variables.scss
+++ b/libs/ui-components/src/styles/_variables.scss
@@ -5,7 +5,9 @@ $spacing-unit: 8px;
 $mat-selection-background-color: #f5f5f5;
 $schedule-description-color: #606060;
 $check-icon-color: #2e5235;
-
+$canvas-width: 50%;
+$card-padding-desktop: 30px;
+$card-margin: 1.7%;
 $description-color: #666;
 $grid-max-width: 1200px;
 $grid-margin-top: 80px;
