feat(frontend): adjust alignment in mobile view

--- a/libs/ui-components/src/shop-cart-info/shop-cart-info.component.html
+++ b/libs/ui-components/src/shop-cart-info/shop-cart-info.component.html
@@ -1,4 +1,5 @@
-<div class="fixed-cart-container">
+
+<div class="fixed-cart-container" #cartContainer>
   <div class="fixed-cart">
     <div class="quantity-content">
       <div class="quantity-section">
