--- a/libs/ui-components/src/shop-cart-info/shop-cart-info.component.scss
+++ b/libs/ui-components/src/shop-cart-info/shop-cart-info.component.scss
@@ -230,9 +230,12 @@ body {
     border: none;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    transition:
+      transform 0.2s ease,
+      box-shadow 0.2s ease;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       transform: scale(1.05);
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
@@ -251,4 +254,3 @@ body {
     display: flex;
   }
 }
-
