--- a/libs/ui-components/src/materials/materials.component.scss
+++ b/libs/ui-components/src/materials/materials.component.scss
@@ -8,6 +8,21 @@ $material-card-hover-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 $material-header-height: 10px;
 $tolerance-container-bg: #f5f3f3;
 
+.view-toggle {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 16px;
+}
+
+mat-button-toggle-group {
+  background: #f4f4f4;
+  border-radius: 4px;
+}
+
+mat-button-toggle {
+  text-transform: uppercase;
+}
+
 .loading-container {
   display: flex;
   justify-content: center;
@@ -15,16 +30,6 @@ $tolerance-container-bg: #f5f3f3;
   height: 100%;
   width: 100%;
   min-height: 200px;
-}
-
-mat-icon {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  border-radius: 50%;
-  font-size: 20px;
-  padding: 5px;
-  color: var(--mat-sys-on-secondary-fixed);
 }
 
 .material-grid {
@@ -48,5 +53,18 @@ mat-icon {
   @media only screen and (max-height: 700px) {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     padding: 20px;
+  }
+}
+
+.app-materials-table-container {
+  width: 60%;
+  overflow-x: auto;
+
+  @media (max-width: 768px) {
+    width: 80%;
+  }
+
+  @media (max-width: 480px) {
+    width: 95%;
   }
 }
