feat(frontend): add input for error text alignment

--- a/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.html
+++ b/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.html
@@ -20,7 +20,7 @@
   }
 
   @if (control.touched) {
-    <mat-error>
+    <mat-error [style.text-align]="errorAlignment">
       @for (error of getErrorMessages(); track error) {
         <span>{{ error }}</span>
       }
