feat(frontend): handle validation error gracefully

--- a/libs/ui-components/src/shop-cart-info/shop-cart-info.component.html
+++ b/libs/ui-components/src/shop-cart-info/shop-cart-info.component.html
@@ -8,6 +8,8 @@
             [control]="quantityControl"
             [label]="'cartInfo.QUANTITY' | transloco"
             [inputType]="'number'"
+            [errorMessages]="errorMessages"
+            [errorAlignment]="'center'"
           ></app-reusable-form-field>
         </div>
       </div>
