--- a/libs/ui-components/src/model-viewer/components/model-list/model-list.component.html
+++ b/libs/ui-components/src/model-viewer/components/model-list/model-list.component.html
@@ -1,6 +1,6 @@
 <div class="model_list">
   @if (errorFetchingModel()) {
-    <p class="error_message">Error fetching models. Please try again later.</p>
+    <p class="error_message">Error fetching models. Try refreshing</p>
   } @else if (models().length) {
     <div class="standard_model_view">
       @for (model of models(); track model.id) {
