refactor(frontend): refactor reusable button for easy customization

--- a/libs/ui-components/src/reusable-components/reusable-button/reusable-button.component.html
+++ b/libs/ui-components/src/reusable-components/reusable-button/reusable-button.component.html
@@ -16,6 +16,15 @@
     [class]="className"
     [type]="type"
     [ngStyle]="styles"
+    [style.background-color]="backgroundColor"
+    [style.color]="color"
+    [style.border-radius]="borderRadius"
+    [style.width]="btnWidth"
+    [style.height]="btnHeight"
+    [style.padding]="btnPadding"
+    [style.display]="displayBtnLabels"
+    [style.justify-content]="justifyBtnLabels"
+    [style.align-items]="alignBtnLabels"
     [disabled]="disabled"
     [attr.aria-label]="ariaLabel || ''"
     (click)="buttonClick.emit($event)"
@@ -30,6 +39,15 @@
     [ngStyle]="styles"
     [type]="type"
     [disabled]="disabled"
+    [style.background-color]="backgroundColor"
+    [style.color]="color"
+    [style.border-radius]="borderRadius"
+    [style.padding]="btnPadding"
+    [style.width]="btnWidth"
+    [style.height]="btnHeight"
+    [style.display]="displayBtnLabels"
+    [style.justify-content]="justifyBtnLabels"
+    [style.align-items]="alignBtnLabels"
     [attr.aria-label]="ariaLabel || ''"
     (click)="buttonClick.emit($event)"
   >
