--- a/libs/ui-components/src/reusable-components/reusable-button/reusable-button.component.scss
+++ b/libs/ui-components/src/reusable-components/reusable-button/reusable-button.component.scss
@@ -1,3 +1,4 @@
+@use '@angular/material' as mat;
 @import '../../styles/variables.scss';
 
 :host {
@@ -49,5 +50,6 @@ button {
       justify-content: center;
       gap: 8px;
     }
+
   }
 }
