refactor(frontend): refactor to use new reusable button customization

--- a/libs/ui-components/src/landing-page/footer/footer.component.html
+++ b/libs/ui-components/src/landing-page/footer/footer.component.html
@@ -39,6 +39,11 @@
           <app-reusable-button
             [className]="'custom-button'"
             [isInFooter]="true"
+            [color]="buttonStyles.color"
+            [borderRadius]="buttonStyles.borderRadius"
+            [btnHeight]="buttonStyles.height"
+            [btnWidth]="buttonStyles.width"
+            [btnPadding]="buttonStyles.padding"
             (buttonClick)="onSubscribe()"
             [disabled]="isSubscriptionLoading()"
           >
