--- a/libs/ui-components/src/materials/components/materials-table/materials-table.component.scss
+++ b/libs/ui-components/src/materials/components/materials-table/materials-table.component.scss
@@ -1,39 +1,32 @@
-.material-name-container {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.material-code-circle {
-  display: flex;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-weight: bold;
-  color: white;
-  border: 2px solid transparent;
-  flex-shrink: 0;
-}
-
-.material-name {
-  font-size: 16px;
-  font-weight: 500;
-  white-space: nowrap;
+.table-container {
+  width: 100%;
+  overflow-x: auto;
+  display: block;
+  padding: 16px;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
   background: white;
-}
+  min-width: 600px;
+  border: 1px solid #ddd;
 
-th,
-td {
-  padding: 12px;
-  text-align: left;
+  th,
+  td {
+    padding: 9px;
+    text-align: left;
+    white-space: nowrap;
+  }
+
+  td {
+    border-bottom: 1px solid #ddd;
+  }
+
+  tr:hover {
+    background-color: #ecdcff;
+    cursor: pointer;
+  }
 }
 
 .mat-mdc-header-row .mat-mdc-header-cell {
@@ -41,22 +34,29 @@ td {
   background-color: #410b83;
 }
 
-td {
-  border-bottom: 1px solid #ddd;
-}
+.material-name-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 
-tr:hover {
-  background-color: #f9f9f9;
-}
-
-@media (max-width: 768px) {
-  table {
-    font-size: 14px;
+  .material-name {
+    font-size: 16px;
+    font-weight: 500;
+    white-space: nowrap;
   }
 
-  th,
-  td {
-    padding: 8px;
+  .material-code-circle {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    border: 2px solid transparent;
+    flex-shrink: 0;
   }
 }
 
@@ -69,4 +69,23 @@ mat-progress-bar {
   width: 100%;
   height: 6px;
   margin-top: 4px;
+}
+
+@media (max-width: 1024px) {
+  .table-container {
+    overflow-x: auto;
+  }
+
+  table {
+    min-width: 1200px;
+  }
+}
+
+.active-row {
+  background-color: #ecdcff;
+  border-left: 4px solid #42008a;
+}
+
+tr.selected:hover {
+  background-color: #ecdcff;
 }
