refactor(frontend): refactor the form filed to align with the ui

--- a/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.html
+++ b/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.html
@@ -1,4 +1,4 @@
-<mat-form-field [class]="className">
+<mat-form-field [class.footer-form-field]="isInFooter" [class]="className">
   <mat-label>{{ label }}{{ optional ? ' (optional)' : '' }}</mat-label>
   @if (isSelect) {
     <mat-select [formControl]="control">
