--- a/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.scss
+++ b/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.scss
@@ -6,6 +6,12 @@
 
 mat-form-field {
   width: 100%;
+  &.footer-form-field {
+    height: 42px;
+    border-radius: 0.5625rem;
+    background: #1F1F1F !important;
+    width: variables.$form-field-width !important;
+  }
   .footer {
     color: variables.$subscription-primary-color !important;
   }
