--- a/libs/ui-components/src/styles/_variables.scss
+++ b/libs/ui-components/src/styles/_variables.scss
@@ -12,8 +12,10 @@ $grid-margin-top: 80px;
 $grid-gap-large: 20px;
 
 $font-size-footer: 0.875rem;
+$footer-border-radius:0.75rem;
+$form-field-width:11.5rem;
 $footer-links-color: #606060;
-$footer-main-background: #1e1925;
+$footer-main-background: #1E1E1E;
 $footer-border-color: #484848;
 $subscription-background: #262626;
 $subscription-primary-color: #a1a1a1;
