--- a/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.scss
+++ b/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.scss
@@ -9,7 +9,7 @@ mat-form-field {
   &.footer-form-field {
     height: 42px;
     border-radius: 0.5625rem;
-    background: #1F1F1F !important;
+    background: #1f1f1f !important;
     width: variables.$form-field-width !important;
   }
   .footer {
