--- a/libs/ui-components/src/landing-page/schedule-call/schedule-call.component.html
+++ b/libs/ui-components/src/landing-page/schedule-call/schedule-call.component.html
@@ -11,9 +11,8 @@
         [className]="'upload-button'"
         (buttonClick)="openContactForm()"
         [styles]="{
-          'background-color': 'var(--mat-sys-on-primary-container)',
+          'background-color': '#131313',
           color: 'white',
-          'border-radius': '25px',
           'font-weight': 'semi-bold',
         }"
       >
@@ -30,9 +29,8 @@
         [className]="'upload-button'"
         [routerLink]="['/library']"
         [styles]="{
-          'background-color': 'var(--mat-sys-on-primary-container)',
+               'background-color': '#131313',
           color: 'white',
-          'border-radius': '25px',
           'font-weight': 'semi-bold',
           display: 'flex',
           'align-items': 'start',
