--- a/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.scss
+++ b/libs/ui-components/src/reusable-components/reusable-form-field/reusable-form-field.component.scss
@@ -11,6 +11,9 @@ mat-form-field {
     border-radius: 0.5625rem;
     background: #1f1f1f !important;
     width: variables.$form-field-width !important;
+    @media (max-width: 991px) {
+      width: 100% !important;
+    }
   }
   .footer {
     color: variables.$subscription-primary-color !important;
