--- a/libs/ui-components/src/styles/_variables.scss
+++ b/libs/ui-components/src/styles/_variables.scss
@@ -4,7 +4,9 @@ $full: 100%;
 $spacing-unit: 8px;
 $mat-selection-background-color: #f5f5f5;
 $schedule-description-color: #606060;
+$schedule-a-call-background-color: #131313;
 $check-icon-color: #2e5235;
+
 
 $description-color: #666;
 $grid-max-width: 1200px;
